--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,42 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "miim/model-contracting",
+    "description": "This is my package model-contracting",
     "keywords": [
-        ":vendor_name",
-        ":package_slug"
+        "M-II-M",
+        "model-contracting"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/M-II-M/model-contracting",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "M-II-M",
+            "email": "aa4052783@gmail.com",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.4"
+        "php": "^8.2",
+        "illuminate/support": "^11.0|^12.0",
+        "illuminate/database": "^11.0|^12.0",
+        "illuminate/http": "^11.0|^12.0",
+        "illuminate/routing": "^11.0|^12.0",
+        "illuminate/validation": "^11.0|^12.0",
+        "illuminate/console": "^11.0|^12.0",
+        "illuminate/pagination": "^11.0|^12.0",
+        "laravel/helpers": "^1.8"
     },
     "require-dev": {
-        :require_dev_testing,
-        :require_dev_codestyle,
-        "spatie/ray": "^1.28"
+        "spatie/ray": "^1.28",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src"
+            "MIIM\\ModelContracting\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        :scripts_testing,
-        :scripts_codestyle
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            :plugins_testing,
-            "phpstan/extension-installer": true
+            "MIIM\\ModelContracting\\Tests\\": "tests"
         }
     },
     "minimum-stability": "dev",
